<resources>
    <string name="app_name">Homework07</string>
    <string name="Login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="et_email_signup">Email</string>
    <string name="lbl_email_signup">Email</string>
    <string name="lbl_password_signup">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup_signUp">SignUp</string>
    <string name="et_firstName">First Name</string>
    <string name="et_lastName">Last Name</string>
    <string name="et_choosePassword">Password</string>
    <string name="btn_signup_signup">SignUp</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender :</string>
    <string name="user_name">Username :</string>
    <string name="first_name">FirstName :</string>
    <string name="last_name">LastName :</string>
    <string name="pass_word">Password :</string>
    <string name="save">Save</string>
    <string name="et_userName">UserName</string>
    <string name="et_password">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btn_signup">Signup</string>
    <string name="tv_title">Title:</string>
    <string name="tv_latitude">Latitude:</string>
    <string name="tv_longitude">Longitude:</string>
    <string name="btn_addTrip">Add Trip</string>
<<<<<<< HEAD
    <string name="join">Join</string>
    <string name="delete">Delete</string>
    <string name="chat">Chat</string>
    <string name="admin">Admin :</string>
=======
    <string name="btn_viewUsers">View Users</string>
    <string name="tv_lbl_username_friendDetails">Usename:</string>
    <string name="tv_lbl_firstName_friendsDetails">First Name:</string>
    <string name="tv_lbl_LastName_friendsDetails">Last Name</string>
    <string name="tv_lbl_gender">Gender:</string>
>>>>>>> 1d69065f6e6fb541dbd4abc1645c28b8192b9e1b
</resources>
